democ46/4b_yesserv_lb_aks.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gslb
  name: yesservlb
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: yeslb.ako.avilab.fun
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: yesserv
